# escher

./: BUILD.gn
escher/: BUILD.gn
escher/impl/: command_buffer.cc  command_buffer_pool.h  mesh_manager.cc  model_shader_generator.cc  model_shader_generator.h
escher/op/: interpreter.cc  interpreter.h
escher/paper/: paper_renderer.cc  paper_renderer.h
escher/profiling/: timestamp_profiler.h
escher/shape/: mesh_spec.h
escher/util/: stopwatch.h
escher/vk/: buffer.cc
examples/waterfall/: BUILD.gn  demo.cc  waterfall_main.cc
examples/waterfall/paper_interpreter/: paper.capnp  paper.capnp.c++  paper.capnp.h  paper_interpreter.cc  paper_interpreter.h
test/: BUILD.gn
