# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//lib/escher/vulkan.gni")

if (is_linux) {
  executable("waterfall") {
    defines = [ "VULKAN_HPP_NO_EXCEPTIONS" ]
    sources = [
      "demo.cc",
      #"scenes/app_test_scene.cc",
      #"scenes/shadow_test_scene.cc",
      "vulkan_proc_addrs.cc",
      "waterfall_main.cc",
      "paper_interpreter/paper_interpreter.cc",
      "paper_interpreter/paper_interpreter.h",
      "paper_interpreter/paper.capnp.c++",
      "paper_interpreter/paper.capnp.h",
    ]
    deps = [
      "//lib/escher/escher",
      "//lib/ftl",
      "third_party:glfw",
    ]
    libs = [
      "dl",
      "glslang",
      "glslang-default-resource-limits",
      "HLSL",
      "OGLCompiler",
      "OSDependent",
      "pthread",
      "SPIRV",
      "X11",
      "Xinerama",
      "Xcursor",
      "Xrandr",
      "vulkan",
    ]
    lib_dirs = [
      "$vulkan_sdk/lib",
      "$vulkan_sdk/lib/glslang",
    ]
    include_dirs = [
      "//lib",
      "//lib/escher",
      "$vulkan_sdk/include",
      "third_party/glfw/include",
    ]
  }
}
